crates/squealy/tests/compile_fail/scalar_order_by_rejected_for_aggregate_select.stderr
error[E0271]: type mismatch resolving `<Expr<'_, CountExpr<UserId>, AggregateExprAst<ColumnExprAst<UserId>>> as ProjectionClass>::Class == ScalarProjection`
  --> tests/compile_fail/scalar_order_by_rejected_for_aggregate_select.rs:16:10
   |
16 |         .select(|(user,)| user.id.count());
   |          ^^^^^^ expected `ScalarProjection`, found `AggregateProjection`
